==> rhr407/rizwan-ESP/Development/esp/SeamlessThings/Sent-to-seamlessthings/RF24-demo/main/RF24.c <==
#include "RF24.h"
#include <stdio.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_system.h"
#include "driver/spi_master.h"
#include "soc/gpio_struct.h"
#include "driver/gpio.h"
#include <stdlib.h>
#include <time.h>
#include <string.h>
#include <assert.h>
#include "freertos/FreeRTOS.h"
#include "freertos/semphr.h"
#include "freertos/timers.h"
#include "nvs_flash.h"
#include "esp_event_loop.h"
#include "esp_log.h"
#include "esp_system.h"
#include "rom/ets_sys.h"
#include "rom/crc.h"
#define PIN_NUM_CE   17 // ---> nRF(Pin3)
#define PIN_NUM_CSn  5  // ---> nRF(Pin4)
#define PIN_NUM_SCK  18 // ---> nRF(Pin5)
#define PIN_NUM_MOSI 23 // ---> nRF(Pin6)
#define PIN_NUM_MISO 19 // ---> nRF(Pin7)

uint8_t RF24_write_payload(const void* buf, uint8_t len)
{
  
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  const uint8_t* current = (const uint8_t *)(buf);

  uint8_t data_len = MIN(len,payload_size);
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
  

  uint8_t val = W_TX_PAYLOAD;


  t.tx_buffer= &val ;               //Data
  ret=spi_device_transmit(spi, &t);  //Transmit!


  while ( data_len-- )
  {
    t.tx_buffer=current++;
    spi_device_transmit(spi, &t);  //Transmit!
  } 

  val = 0;

  while ( blank_len-- )
  {
    t.tx_buffer=&val;
    spi_device_transmit(spi, &t);  //Transmit!
  }

  assert(ret==ESP_OK);            //Should have had no issues.  

  return ret;

}

uint8_t RF24_read_payload(void* buf, uint8_t len)
{
  
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  uint8_t* current = (uint8_t *)(buf);

  uint8_t data_len = MIN(len,payload_size);
  uint8_t blank_len = dynamic_payloads_enabled ? 0 : payload_size - data_len;
  

  uint8_t val = R_RX_PAYLOAD;

  t.tx_buffer= &val ;               //Data
  ret=spi_device_transmit(spi, &t);  //Transmit!

  val = 0xff;

  while ( data_len-- )
  {
    t.tx_buffer=&val;
    spi_device_transmit(spi, &t);  //Transmit!
    *(uint8_t*)t.rx_data=current++;
  } 

  while ( blank_len-- )
  {
    t.tx_buffer=&val;
    spi_device_transmit(spi, &t);  //Transmit!
  }

  assert(ret==ESP_OK);            //Should have had no issues.  

  return ret;
}

uint8_t RF24_flush_rx(void)
{
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  uint8_t val = FLUSH_RX;

  t.tx_buffer= &val ;     
  ret=spi_device_transmit(spi, &t);  //Transmit!

  return ret;
}

uint8_t RF24_flush_tx(void)
{
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  uint8_t val = FLUSH_TX;


  t.tx_buffer= &val ;     
  ret=spi_device_transmit(spi, &t);  //Transmit!

  return ret;
}

uint8_t RF24_get_status(void)
{
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  uint8_t val = NOP;

  t.tx_buffer= &val ;     
  ret=spi_device_transmit(spi, &t);  //Transmit!

  return ret;
}

void RF24_begin(void)
{
  // Initialize CE of Radio
  gpio_set_direction(PIN_NUM_CE, GPIO_MODE_OUTPUT);

  init_SPI_for_RF24();

  // Must allow the radio time to settle else configuration bits will not necessarily stick.
  // This is actually only required following power up but some settling time also appears to
  // be required after resets too. For full coverage, we'll always assume the worst.
  // Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
  // Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
  // WARNING: Delay is based on P-variant whereby non-P *may* require different timing.

  vTaskDelay(5 / portTICK_PERIOD_MS); //5 ms delay

  // Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
  // WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
  // sizes must never be used. See documentation for a more complete explanation.
  // RF24_write_register_single_len(SETUP_RETR,(0x4 << ARD) | (0xF << ARC)); //B0100 //B1111





  // Restore our default PA level
  RF24_setPALevel( RF24_PA_MAX ) ;

  // Determine if this is a p or non-p RF24 module and then
  // reset our data rate back to default value. This works
  // because a non-P variant won't allow the data rate to
  // be set to 250Kbps.
  if( RF24_setPALevel( RF24_250KBPS ) )
  {
    p_variant = true ;
  }
  
  // Then set the data rate to the slowest (and most reliable) speed supported by all
  // hardware.
  RF24_setPALevel( RF24_1MBPS ) ;

  // Initialize CRC and request 2-byte (16bit) CRC
  RF24_setCRCLength( RF24_CRC_16 ) ;
  
  // Disable dynamic payloads, to match dynamic_payloads_enabled setting
  RF24_write_register_single_len(DYNPD,0);

  // Reset current status
  // Notice reset and flush is the last thing we do
  RF24_write_register_single_len(RF24_STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Set up default configuration.  Callers can always change it later.
  // This channel should be universally safe and not bleed over into adjacent
  // spectrum.
  RF24_setChannel(76);

  // Flush buffers
  RF24_flush_rx();
  RF24_flush_tx();
}

void RF24_startListening(void)
{
  RF24_write_register_single_len(CONFIG, RF24_read_register_single_len(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
  RF24_write_register_single_len(RF24_STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

  // Restore the pipe0 adddress, if exists
  if (pipe0_reading_address)
    RF24_write_register_multi_len(RX_ADDR_P0, (const uint8_t *)(&pipe0_reading_address), 5);

  // Flush buffers
  RF24_flush_rx();
  RF24_flush_tx();

  // Go!
  RF24_ce(1);

  // wait for the radio to come up (130us actually only needed)
    vTaskDelay(1 / portTICK_PERIOD_MS); //5 ms delay

}

void RF24_powerDown(void)
{
  RF24_write_register_single_len(CONFIG,RF24_read_register_single_len(CONFIG) & ~_BV(PWR_UP));
}

void RF24_powerUp(void)
{
  RF24_write_register_single_len(CONFIG,RF24_read_register_single_len(CONFIG) | _BV(PWR_UP));
}

void RF24_startWrite( const void* buf, uint8_t len )
{
  // Transmitter power-up
  RF24_write_register_single_len(CONFIG, ( RF24_read_register_single_len(CONFIG) | _BV(PWR_UP) ) & ~_BV(PRIM_RX) );
  vTaskDelay(1 / portTICK_PERIOD_MS); //5 ms delay

  // Send the payload
  RF24_write_payload( buf, len );

  // Allons!
  RF24_ce(1);
  vTaskDelay(1 / portTICK_PERIOD_MS); //5 ms delay
  RF24_ce(0);
}

uint8_t RF24_getDynamicPayloadSize(void)
{
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;


  uint8_t val = R_RX_PL_WID;

  t.tx_buffer= &val ;  
  t.flags = SPI_TRANS_USE_RXDATA;


  ret=spi_device_transmit(spi, &t);  //Transmit!

  val = 0xff;

  t.tx_buffer=&val;
  spi_device_transmit(spi, &t);  //Transmit!

  assert(ret==ESP_OK);            //Should have had no issues.
  

  return *(uint8_t*)t.rx_data;  
}

void RF24_openWritingPipe(uint64_t value)
{
  // Note that AVR 8-bit uC's store this LSB first, and the NRF24L01(+)
  // expects it LSB first too, so we're good.

  RF24_write_register_multi_len(RX_ADDR_P0, (uint8_t *)(&value), 5);
  RF24_write_register_multi_len(TX_ADDR, (uint8_t *)(&value), 5);

  const uint8_t max_payload_size = 32;
  RF24_write_register_single_len(RX_PW_P0,MIN(payload_size,max_payload_size));
}

void RF24_toggle_features(void)
{
  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  uint8_t val = ACTIVATE;


  t.tx_buffer= &val ;               //Data
  ret=spi_device_transmit(spi, &t);  //Transmit!

  val = 0x73;

  t.tx_buffer=&val ;
  spi_device_transmit(spi, &t);  //Transmit!

  assert(ret==ESP_OK);            //Should have had no issues.  
}

void RF24_enableDynamicPayloads(void)
{
  // Enable dynamic payload throughout the system
  RF24_write_register_single_len(FEATURE,RF24_read_register_single_len(FEATURE) | _BV(EN_DPL) );

  // If it didn't work, the features are not enabled
  if ( ! RF24_read_register_single_len(FEATURE) )
  {
    // So enable them and try again
    RF24_toggle_features();
    RF24_write_register_single_len(FEATURE,RF24_read_register_single_len(FEATURE) | _BV(EN_DPL) );
  }

  IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",RF24_read_register_single_len(FEATURE)));

  // Enable dynamic payload on all pipes
  //
  // Not sure the use case of only having dynamic payload on certain
  // pipes, so the library does not support it.
  RF24_write_register_single_len(DYNPD,RF24_read_register_single_len(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

  dynamic_payloads_enabled = true;
}

void RF24_enableAckPayload(void)
{
  //
  // enable ack payload and dynamic payload features
  //

  RF24_write_register_single_len(FEATURE,RF24_read_register_single_len(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );

  // If it didn't work, the features are not enabled
  if ( ! RF24_read_register_single_len(FEATURE) )
  {
    // So enable them and try again
    RF24_toggle_features();
    RF24_write_register_single_len(FEATURE,RF24_read_register_single_len(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );
  }

  IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",RF24_read_register_single_len(FEATURE)));

  //
  // Enable dynamic payload on pipes 0 & 1
  //

  RF24_write_register_single_len(DYNPD, RF24_read_register_single_len(DYNPD) | _BV(DPL_P1) | _BV(DPL_P0));
}

void RF24_writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
  const uint8_t* current = (uint8_t *)(buf);

  memset(&t, 0, sizeof(t));       //Zero out the transaction
  t.length=8;

  uint8_t val = W_ACK_PAYLOAD | ( pipe & 0x7 );

  t.tx_buffer= &val ;               
  ret=spi_device_transmit(spi, &t);  //Transmit!

  const uint8_t max_payload_size = 32;
  uint8_t data_len = MIN(len,max_payload_size);

  while ( data_len-- )
  {
    t.tx_buffer=current++ ;
    spi_device_transmit(spi, &t);  //Transmit!
  }

  assert(ret==ESP_OK);            //Should have had no issues.  

  return ESP_OK;  
}

bool RF24_setPALevel(rf24_pa_dbm_e level)
{
  uint8_t setup = RF24_read_register_single_len(RF_SETUP) ;
  setup &= ~(_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;

  // switch uses RAM (evil!)
  if ( level == RF24_PA_MAX )
  {
    setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
  }
  else if ( level == RF24_PA_HIGH )
  {
    setup |= _BV(RF_PWR_HIGH) ;
  }
  else if ( level == RF24_PA_LOW )
  {
    setup |= _BV(RF_PWR_LOW);
  }
  else if ( level == RF24_PA_MIN )
  {
    // nothing
  }
  else if ( level == RF24_PA_ERROR )
  {
    // On error, go to maximum PA
    setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
  }

  return RF24_write_register_single_len( RF_SETUP, setup ) ;


}

bool RF24_setDataRate(rf24_datarate_e speed)
{
  bool result = false;
  uint8_t setup = RF24_read_register_single_len(RF_SETUP) ;

  // HIGH and LOW '00' is 1Mbs - our default
  wide_band = false ;
  setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;
  if( speed == RF24_250KBPS )
  {
    // Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
    // Making it '10'.
    wide_band = false ;
    setup |= _BV( RF_DR_LOW ) ;
  }
  else
  {
    // Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
    // Making it '01'
    if ( speed == RF24_2MBPS )
    {
      wide_band = true ;
      setup |= _BV(RF_DR_HIGH);
    }
    else
    {
      // 1Mbs
      wide_band = false ;
    }
  }
  RF24_write_register_single_len(RF_SETUP,setup);

  // Verify our result
  if ( RF24_read_register_single_len(RF_SETUP) == setup )
  {
    result = true;
  }
  else
  {
    wide_band = false;
  }

  return result;
}

void RF24_setCRCLength(rf24_crclength_e length)
{
  uint8_t config = RF24_read_register_single_len(CONFIG) & ~( _BV(CRCO) | _BV(EN_CRC)) ;
  
  // switch uses RAM (evil!)
  if ( length == RF24_CRC_DISABLED )
  {
    // Do nothing, we turned it off above. 
  }
  else if ( length == RF24_CRC_8 )
  {
    config |= _BV(EN_CRC);
  }
  else
  {
    config |= _BV(EN_CRC);
    config |= _BV( CRCO );
  }
  RF24_write_register_single_len( CONFIG, config ) ;
}

void RF24_disableCRC( void )
{
  uint8_t disable = RF24_read_register_single_len(CONFIG) & ~_BV(EN_CRC) ;
  RF24_write_register_single_len( CONFIG, disable ) ;
}
