==> exoticmoose/goBoard/playground/goBoard-Launchpad/nRF24/RF24.c <==
#include <stdint.h>
#include <stdbool.h>
#include "inc/hw_memmap.h"
#include "driverlib/pin_map.h"
#include "driverlib/gpio.h"
#include "driverlib/sysctl.h"
#include "driverlib/uart.h"
#include "utils/uartstdio.h"
#include "driverlib/ssi.h" // Prototypes for the SSI/SPI routines.
#include "nRF24L01.h"
#include "RF24_config.h"
#include "RF24.h"
#include "FreeRTOS.h"
#include "task.h"

uint8_t RF24_write_payload(const void* buf, uint8_t len)
{
	uint8_t status = 0;

	RF24_csn(LOW);
	{
		const uint8_t* current = (const uint8_t*)(buf);
		uint8_t data_len = min(len,g_RF24_data.payload_size);
		uint8_t blank_len = g_RF24_data.dynamic_payloads_enabled ? 0 : g_RF24_data.payload_size - data_len;

		//printf("[Writing %u bytes %u blanks]",data_len,blank_len);

		status = SPI_transfer( W_TX_PAYLOAD );
		while ( data_len-- )
		{
			SPI_transfer(*current++);
		}
		while ( blank_len-- )
		{
			SPI_transfer(0);
		}
	}
	RF24_csn(HIGH);

	return status;
}

uint8_t RF24_read_payload(void* buf, uint8_t len)
{
	uint8_t status = 0;

	RF24_csn(LOW);
	{
		uint8_t* current = (uint8_t*)(buf);

		uint8_t data_len = min(len,g_RF24_data.payload_size);
		uint8_t blank_len = g_RF24_data.dynamic_payloads_enabled ? 0 : g_RF24_data.payload_size - data_len;

		//printf("[Reading %u bytes %u blanks]",data_len,blank_len);
		status = SPI_transfer( R_RX_PAYLOAD );
		while ( data_len-- )
		{
			*current++ = SPI_transfer(0xff);
		}
		while ( blank_len-- )
		{
			SPI_transfer(0xff);
		}
	}
	RF24_csn(HIGH);

	return status;
}

uint8_t RF24_flush_rx(void)
{
	uint8_t status;

	RF24_csn(LOW);
	status = SPI_transfer( FLUSH_RX );
	RF24_csn(HIGH);

	return status;
}

uint8_t RF24_flush_tx(void)
{
	uint8_t status;

	RF24_csn(LOW);
	status = SPI_transfer( FLUSH_TX );
	RF24_csn(HIGH);

	return status;
}

uint8_t RF24_get_status(void)
{
	uint8_t status;

	RF24_csn(LOW);
	status = SPI_transfer( NOP );
	RF24_csn(HIGH);

	return status;
}

void RF24_begin(void)
{
	RF24_init_pins( &g_RF24_data );

	RF24_ce(LOW);
	RF24_csn(HIGH);

	// Must allow the radio time to settle else configuration bits will not necessarily stick.
	// This is actually only required following power up but some settling time also appears to
	// be required after resets too. For full coverage, we'll always assume the worst.
	// Enabling 16b CRC is by far the most obvious case if the wrong timing is used - or skipped.
	// Technically we require 4.5ms + 14us as a worst case. We'll just call it 5ms for good measure.
	// WARNING: Delay is based on P-variant whereby non-P *may* require different timing.
	delayMicroseconds( 5 ) ;

	// Set 1500uS (minimum for 32B payload in ESB@250KBPS) timeouts, to make testing a little easier
	// WARNING: If this is ever lowered, either 250KBS mode with AA is broken or maximum packet
	// sizes must never be used. See documentation for a more complete explanation.
	RF24_write_byte_register(SETUP_RETR,(0x4 << ARD) | (0xF << ARC));	// 0x04 0x4F

	// Restore our default PA level
	RF24_setPALevel( RF24_PA_MAX ) ; // 3

	// 250Kbps.
	if( RF24_setDataRate( RF24_250KBPS ) ) // 2
	{
		g_RF24_data.p_variant = true ;
	}
  
	// Then set the data rate to the slowest (and most reliable) speed supported by all
	// hardware.
	RF24_setDataRate( RF24_1MBPS ) ;	// 0

	// Initialize CRC and request 2-byte (16bit) CRC
	RF24_setCRCLength( RF24_CRC_16 ) ;

	// Disable dynamic payloads, to match dynamic_payloads_enabled setting
	RF24_write_byte_register(DYNPD,0);

	// Reset current status
	// Notice reset and flush is the last thing we do
	RF24_write_byte_register(STATUS,_BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Set up default configuration.  Callers can always change it later.
	// This channel should be universally safe and not bleed over into adjacent
	// spectrum.
	RF24_setChannel(76);

	// Flush buffers
	RF24_flush_rx();
	RF24_flush_tx();
}

void RF24_startListening(void)
{
	RF24_write_byte_register(CONFIG, RF24_read_byte_register(CONFIG) | _BV(PWR_UP) | _BV(PRIM_RX));
	RF24_write_byte_register(STATUS, _BV(RX_DR) | _BV(TX_DS) | _BV(MAX_RT) );

	// Restore the pipe0 adddress, if exists
	if (g_RF24_data.pipe0_reading_address)
	{
		RF24_write_chunk_register(RX_ADDR_P0, (const uint8_t*)(&g_RF24_data.pipe0_reading_address), 5);
	}

	// Flush buffers
	RF24_flush_rx();
	RF24_flush_tx();

	RF24_ce(HIGH);

	// wait for the radio to come up (130us actually only needed)
	delayMicroseconds(130);
}

void RF24_powerDown(void)
{
	RF24_write_byte_register(CONFIG,RF24_read_byte_register(CONFIG) & ~_BV(PWR_UP));
}

void RF24_powerUp(void)
{
	RF24_write_byte_register(CONFIG,RF24_read_byte_register(CONFIG) | _BV(PWR_UP));
}

void RF24_startWrite( const void* buf, uint8_t len )
{
	// Transmitter power-up
	RF24_write_byte_register(CONFIG, ( RF24_read_byte_register(CONFIG) | _BV(PWR_UP) ) & ~_BV(PRIM_RX) );
	delayMicroseconds(150);

	// Send the payload
	RF24_write_payload( buf, len );

	// Allons!
	RF24_ce(HIGH);
	delayMicroseconds(15);
	RF24_ce(LOW);
}

uint8_t RF24_getDynamicPayloadSize(void)
{
	uint8_t result = 0;

	RF24_csn(LOW);
	SPI_transfer( R_RX_PL_WID );
	result = SPI_transfer(0xff);
	RF24_csn(HIGH);

	return result;
}

void RF24_openWritingPipe(uint64_t value)
{
	// Note that AVR 8-bit uC's store this LSB first, and the NRF24L01(+)
	// expects it LSB first too, so we're good.

	RF24_write_chunk_register(RX_ADDR_P0, (uint8_t*)(&value), 5);
	RF24_write_chunk_register(TX_ADDR, (uint8_t*)(&value), 5);

	{
		const uint8_t max_payload_size = 32;
		RF24_write_byte_register(RX_PW_P0,min(g_RF24_data.payload_size,max_payload_size));
	}
}

void RF24_toggle_features(void)
{
	RF24_csn(LOW);

	SPI_transfer( ACTIVATE );
	SPI_transfer( 0x73 );

	RF24_csn(HIGH);
}

void RF24_enableDynamicPayloads(void)
{
	// Enable dynamic payload throughout the system
	RF24_write_byte_register(FEATURE,RF24_read_byte_register(FEATURE) | _BV(EN_DPL) );

	// If it didn't work, the features are not enabled
	if ( ! RF24_read_byte_register(FEATURE) )
	{
		// So enable them and try again
		RF24_toggle_features();
		RF24_write_byte_register(FEATURE,RF24_read_byte_register(FEATURE) | _BV(EN_DPL) );
	}

	IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",RF24_read_byte_register(FEATURE)));

	// Enable dynamic payload on all pipes
	//
	// Not sure the use case of only having dynamic payload on certain
	// pipes, so the library does not support it.
	RF24_write_byte_register(DYNPD,RF24_read_byte_register(DYNPD) | _BV(DPL_P5) | _BV(DPL_P4) | _BV(DPL_P3) | _BV(DPL_P2) | _BV(DPL_P1) | _BV(DPL_P0));

	g_RF24_data.dynamic_payloads_enabled = true;
}

void RF24_enableAckPayload(void)
{
	//
	// enable ack payload and dynamic payload features
	//

	RF24_write_byte_register(FEATURE,RF24_read_byte_register(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );

	// If it didn't work, the features are not enabled
	if ( ! RF24_read_byte_register(FEATURE) )
	{
		// So enable them and try again
		RF24_toggle_features();
		RF24_write_byte_register(FEATURE,RF24_read_byte_register(FEATURE) | _BV(EN_ACK_PAY) | _BV(EN_DPL) );
	}

	IF_SERIAL_DEBUG(printf("FEATURE=%i\r\n",RF24_read_byte_register(FEATURE)));

	//
	// Enable dynamic payload on pipes 0 & 1
	//

	RF24_write_byte_register(DYNPD,RF24_read_byte_register(DYNPD) | _BV(DPL_P1) | _BV(DPL_P0));
}

void RF24_writeAckPayload(uint8_t pipe, const void* buf, uint8_t len)
{
	RF24_csn(LOW);
	{
		const uint8_t* current = (const uint8_t*)(buf);

		SPI_transfer( W_ACK_PAYLOAD | ( pipe & 0x7 ) );
		{
			const uint8_t max_payload_size = 32;
			uint8_t data_len = min(len,max_payload_size);
			while ( data_len-- )
			{
				SPI_transfer(*current++);
			}
		}
	}

	RF24_csn(HIGH);
}

void RF24_setPALevel(rf24_pa_dbm_e level)
{
	uint8_t setup = RF24_read_byte_register(RF_SETUP) ;	//
	setup &= ~(_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;		// (~(0x06)) 0x0e -> 0x08

	// switch uses RAM (evil!)
	if ( level == RF24_PA_MAX )
	{
		setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;		// 0x08 -> 0x0e. 1 (2 Mbps ?) 11 (0 dbM)
	}
	else if ( level == RF24_PA_HIGH )
	{
		setup |= _BV(RF_PWR_HIGH) ;
	}
	else if ( level == RF24_PA_LOW )
	{
		setup |= _BV(RF_PWR_LOW);
	}
	else if ( level == RF24_PA_MIN )
	{
		// nothing
	}
	else if ( level == RF24_PA_ERROR )
	{
		// On error, go to maximum PA
		setup |= (_BV(RF_PWR_LOW) | _BV(RF_PWR_HIGH)) ;
	}

	RF24_write_byte_register( RF_SETUP, setup ) ;
}

bool RF24_setDataRate(rf24_datarate_e speed)
{
	bool result = false;
	uint8_t setup = RF24_read_byte_register(RF_SETUP) ;	// (0x06)

	// HIGH and LOW '00' is 1Mbs - our default
	g_RF24_data.wide_band = false ;
	setup &= ~(_BV(RF_DR_LOW) | _BV(RF_DR_HIGH)) ;		// ( 0b0010 1000 )
	if( speed == RF24_250KBPS )
	{
		// Must set the RF_DR_LOW to 1; RF_DR_HIGH (used to be RF_DR) is already 0
		// Making it '10'.
		g_RF24_data.wide_band = false ;
		setup |= _BV( RF_DR_LOW ) ;
	}
	else
	{
		// Set 2Mbs, RF_DR (RF_DR_HIGH) is set 1
		// Making it '01'
		if ( speed == RF24_2MBPS )
		{
			g_RF24_data.wide_band = true ;
			setup |= _BV(RF_DR_HIGH);
		}
		else
		{
			// 1Mbs
			g_RF24_data.wide_band = false ;
		}
	}
	RF24_write_byte_register(RF_SETUP,setup);		// 0x06, setup

	// Verify our result
	if ( RF24_read_byte_register(RF_SETUP) == setup )	// 0x06
	{
		result = true;
	}
	else
	{
		g_RF24_data.wide_band = false;
	}
	return result;
}

void RF24_setCRCLength(rf24_crclength_e length)
{
	uint8_t config = RF24_read_byte_register(CONFIG) & ~( _BV(CRCO) | _BV(EN_CRC)) ;

	// switch uses RAM (evil!)
	if ( length == RF24_CRC_DISABLED )
	{
		// Do nothing, we turned it off above. 
	}
	else if ( length == RF24_CRC_8 )
	{
		config |= _BV(EN_CRC);
	}
	else
	{
		config |= _BV(EN_CRC);
		config |= _BV( CRCO );
	}
	RF24_write_byte_register( CONFIG, config ) ;
}

void RF24_disableCRC( void )
{
	uint8_t disable = RF24_read_byte_register(CONFIG) & ~_BV(EN_CRC) ;
	RF24_write_byte_register( CONFIG, disable ) ;
}
